# appLP

./: .readthedocs.yaml  README.md  pyproject.toml
.ai/: structure.md
.dev/: add_dependency.bat  add_dependency.py  add_module.bat  add_module.py  add_script.bat  add_script.py  bump_majorversion.bat  bump_minorversion.bat  doc_make.bat  upload_newversion.bat  upload_newversion.py
.opencode/instructions/: docstrings.md  structure.md
docs/handwritten/: library_basics.rst  license.rst  simple_example.rst
docs/source/: App.rst  AutoScrollbar.rst  CanvasImage.rst  beginner_guide.rst  concepts.rst  conf.py  crop_image.rst  features.rst  index.rst  install.rst  modules.rst  quicky.rst  reference_guide.rst  routines.rst  scripts.rst  tutorials.rst  user_guide.rst  what_is.rst
src/applp/: __init__.py
src/applp/modules/App_LP/: App.py  test_App.py
src/applp/modules/AutoScrollbar_LP/: AutoScrollbar.py  test_AutoScrollbar.py
src/applp/modules/CanvasImage_LP/: CanvasImage.py  test_CanvasImage.py
src/applp/modules/crop_image_LP/: crop_image.py  test_crop_image.py
